--- a/phalcon-landing/app/views/index.phtml
+++ b/phalcon-landing/app/views/index.phtml
@@ -11,7 +11,38 @@
     </head>
     <body>
         <div class="container">
-            <?php echo $this->getContent(); ?>
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+                <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/link">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/link2">Link 2</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/link3">Link 3</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/link4">Link 4</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/link5">Link 5</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <main role="main">
+                <div class="container">
+                    <div class="pt-5">
+                        <?php echo $this->getContent(); ?>
+                    </div>
+                </div>
+            </main>
         </div>
         <!-- jQuery first, then Popper.js, and then Bootstrap's JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
