--- a/phalcon-landing/app/views/index/index.phtml
+++ b/phalcon-landing/app/views/index/index.phtml
@@ -1,7 +1,1 @@
-<div class="page-header">
-    <h1>Congratulations! landing</h1>
-</div>
-
-<p>You're now flying with Phalcon. Great things are about to happen!</p>
-
-<p>This page is located at <code>views/index/index.phtml</code></p>
+<h1 class="display-3">Hello, world!</h1>
