--- a/phalcon-landing/app/views/index.phtml
+++ b/phalcon-landing/app/views/index.phtml
@@ -33,6 +33,8 @@
                             <a class="nav-link" href="/link5">Link 5</a>
                         </li>
                     </ul>
+
+                    <a class="nav-link text-white" href="/admin/activity">Admin</a>
                 </div>
             </nav>
 
